--- a/frontend/src/blocks/logo/__image/logo__image.css
+++ b/frontend/src/blocks/logo/__image/logo__image.css
@@ -6,12 +6,17 @@
   margin-top: 45px;
 }
 
+@media screen and (max-width: 1000px) {
+  .logo__image {
+    padding-left: 27px;
+  }
+}
+
 @media screen and (max-width: 765px) {
   .logo__image {
     max-width: 126px;
     max-height: 24px;
     padding-bottom: 32px;
-    padding-left: 27px;
     margin-top: 28px;
   }
 }
